# godcoin-neon

./: .gitignore  README.md  index.d.ts  package.json
lib/: asset.d.ts  asset.js  block.d.ts  block.js  crypto.d.ts  crypto.js  index.d.ts  index.js  net.d.ts  net.js  tx.d.ts  tx.js
native/: Cargo.toml
native/src/: asset.rs  crypto.rs  lib.rs  util.rs
native/src/block/: decoder.rs  encoder.rs  mod.rs
native/src/net/: constants.rs  decoder.rs  encoder.rs  mod.rs
native/src/tx/: decoder.rs  encoder.rs  mod.rs
scripts/: per-env.js
test/: index.js  test_asset.js  test_block.js  test_crypto.js  test_net.js  test_tx_encoding.js
test/net/: index.js  test_block.js  test_broadcast.js  test_error.js  test_event.js  test_handshake.js  test_properties.js  test_total_fee.js
