[package]
name = "godcoin-neon"
version = "0.0.1"
authors = ["samrg472 <samrg472@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
godcoin = { git = "https://github.com/GODcoin/godcoin-rs.git", rev = "966b7d1" }
neon = "0.2.0"
