[package]
name = "godcoin-neon"
version = "0.0.1"
authors = ["samrg472 <samrg472@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon"
crate-type = ["dylib"]

[profile.release]
debug = true

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
bytes = "0.4.9"
futures = "0.1.24"
godcoin = { git = "https://github.com/GODcoin/godcoin-rs.git", rev = "64d0b39" }
parking_lot = "0.6.4"
log = "0.4.4"
neon = "0.2.0"
sodiumoxide = { version = "0.1.0", default-features = false, features = ["std"] }
tokio-codec = "0.1.0"
